# PainterOS

./: .editorconfig  .gitignore  .pre-commit-config copy.yaml  INSTALL  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: canvas.yaml  physics.yaml
src/painteros/brush/: __init__.py  brush_asset.py  brush_shape.py  brush_stamp.py  brush_state.py  brush_tip.py
src/painteros/canvas/: brush.py  canvas_state.py  dirty_manager.py  layer.py  layer_manager.py  layers.py  spaces.py  state.py  statistics.py  stroke.py  stroke_engine.py  tile.py  tile_manager.py  transform_graph.py
src/painteros/commands/: command.py  player.py  recorder.py  serializer.py  stroke.py
src/painteros/core/: application.py  asset.py  asset_registry.py  asset_state.py  asset_type.py  clock.py  config.py  context.py  engine.py  engine_configuration.py  eventbus.py  events.py  exceptions.py  logger.py  resource_manager.py  services.py  storage_manager.py
src/painteros/math/: geometry.py  matrix.py  point.py  rect.py  transform.py  transform2d.py
src/painteros/plugins/: manager.py
tests/: test_asset_registry.py  test_brush.py  test_canvas.py  test_clock.py  test_commands.py  test_config.py  test_dirty_manager.py  test_engine.py  test_eventbus.py  test_geometry.py  test_layer_descriptor.py  test_layer_manager.py  test_recorder.py  test_resource_manager.py  test_resources.py  test_services.py  test_statistics.py  test_storage.py  test_storage_manager.py  test_stroke_path.py  test_tile_layer.py  test_tile_manager.py  test_transform.py  test_transform2d.py
(+18 files in other folders)
