[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PainterOS"
version = "0.1.0-alpha"
description = "Physics based AI Painting Simulator"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "PainterOS Team" }
]

license = { text = "MIT" }

dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "opencv-python>=4.10",
    "Pillow>=11.0",
    "PyYAML>=6.0",
    "PySide6>=6.8",
    "numba>=0.60",
]

[project.optional-dependencies]

dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "black>=24.10",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[tool.black]

line-length = 100
target-version = ["py312"]

[tool.ruff]

line-length = 100

target-version = "py312"

[tool.ruff.lint]

select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B"
]

[tool.pytest.ini_options]

testpaths = [
    "tests"
]

pythonpath = [
    "src"
]

[tool.coverage.run]

source = [
    "src/painteros"
]

[tool.mypy]

python_version = "3.12"

warn_return_any = true

warn_unused_configs = true

strict = true